--- a/app/views/layouts/partials/_external_footer.html.erb
+++ b/app/views/layouts/partials/_external_footer.html.erb
@@ -1,17 +1,16 @@
 <footer>
 			<div class="container">
 				<div class="row">
-					<div class="col-md-5">
+					<div class="col-md-5 col-sm-6 col-xs-12">
 						<div class="logo-wrap">
 							<%= image_tag "new_white_logo.png", class: "img-responsive footer-logo", alt: "Start your climb" %>
 						</div>
 					</div>
-					<div class="col-md-7">
+					<div class="col-md-7 col-sm-6 col-xs-12">
 						<ul class="footer-nav text-right">
 							<li>
 								<%= link_to "Want To Be A Partner?", partner_path %>
 							</li>
-							<span class="divider"></span>
 							<div class="navicon social-icons">
 								<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
 								<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
