--- a/app/views/pages/partner.html.erb
+++ b/app/views/pages/partner.html.erb
@@ -1,33 +1,31 @@
 		<header>
-				<section class="header-secondary">
-					<div class="container">
-						<div class="row nav-wrapper">
-							<div class="col-md-6 col-sm-6 col-xs-6 text-left">
-									<div class="main-logo">
-									<%= link_to root_path do %>
-										<%= image_tag "new_white_logo.png", class: "img-responsive", alt: "Boxify Logo" %>
-									<% end %>
-								</div>
-							</div>
-							<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon social-icons">
-								<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
-								<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
-								<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
-							</a>
-							</div>
+			<section class="partner-hero">
+				<div class="texture-overlay"></div>
+				<div class="container">
+					<div class="row nav-wrapper">
+						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
+								<%= link_to root_path do %>
+									<%= image_tag "new_white_logo.png", class: "img-box", alt: "Boxify Logo" %>
+								<% end %>
+						</div>
+						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon social-icons clearfix">
+							<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
+							<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
+						</a>
 						</div>
 					</div>
-				</section>
-		</header>
-
-				<section class="partner-hero">
-					<div class="texture-overlay"></div>
 					<div class="row hero-content">
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown text-center">Become a Partner.</h1>
 						</div>
 					</div>
+				</div>
 			</section>
+		</header>
+
+
+
 
 
 		<section class="benefits-list">
@@ -41,7 +39,7 @@
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h1>High Quality New Clients</h1>
+								<h5>High Quality New Clients</h5>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
@@ -52,7 +50,7 @@
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h1>Incremental Revenue</h1>
+								<h5>Incremental Revenue</h5>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
@@ -64,7 +62,7 @@
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h1>Marketing &amp; Brand Exposure</h1>
+								<h5>Marketing &amp; Brand Exposure</h5>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
@@ -75,7 +73,7 @@
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h1>Seamless Technology</h1>
+								<h5>Seamless Technology</h5>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
