--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -484,7 +484,7 @@ Buttons
 
 .os-btn {
     display: inline-block;
-    padding: 18px 46px;
+    padding: 3% 8%;
     border-radius: 3px;
     color: #fff;
     font-size: 16px;
@@ -572,7 +572,7 @@ Navigation
 }
 .navicon {
     position: relative;
-    height: 26px;
+
 }
 .navicon p {
     margin: 1px 50px 0 0
@@ -588,7 +588,7 @@ Hero
 ========================================================================== */
 .hero {
     position: relative;
-    padding: 30px 0 60px 0;
+    padding: 15px 0 60px 0;
     min-height: 800px;
     background: rgb(40, 70, 102) no-repeat center center;
     background-image:image-url('hero-main.jpg'); 
@@ -600,7 +600,7 @@ Hero
     margin: 200px 0 0 0;
     font-weight: 300;
     font-size: 45px;
-    color:#abfd2d;
+    color:#23CE6B;
 }
 .hero h1 span {
     display: inline-block;
@@ -616,7 +616,7 @@ Hero
     height: 100%;
 }
 header i {
-    margin-left: 5px
+    margin-left: 5px;
 }
 
 
@@ -631,12 +631,12 @@ Custom Slider Controls (Flickity)
     height: 13px;
     opacity: 1;
     background: transparent;
-    border: 2px solid white;
+    border: 2px solid #23CE6B;
     -webkit-transition: background 0.3s;
     transition: background 0.3s;
 }
 .flickity-page-dots .dot.is-selected {
-    background: white;
+    background: #23CE6B;
 }
 
 /* ==========================================================================
@@ -646,7 +646,7 @@ Features Slider
     position: relative;
     min-height: 400px;
     background: no-repeat center center;
-    background-image:image-url('features-intro-01.jpg');
+    background-image:image-url('summit-climb.jpg');
     background-size: cover;
 }
 .features-img {
@@ -657,9 +657,9 @@ Features Slider
 }
 .features-slider {
     position: relative;
-    padding: 11% 100px 10% 100px;
+    padding: 7% 80px 10% 80px;
     height: 400px;
-    background-color: #3F6184;
+    background-color: #12355B;
 }
 .features-slider ul {
     margin: 0;
@@ -687,13 +687,20 @@ Features Slider
     padding: 0;
 }
 .features-slider .flickity-page-dots {
-    text-align: left;
-    margin-top: 50px;
+    text-align: center;
+    margin-top: 10%;
     position: static;
 }
 .features-slider .flickity-page-dots .dot {
     margin: 0 12px 0 0;
 }
+
+.custom-responsive {
+    display: inline-block;
+    max-width: 100%;
+    height: 30px;
+}
+
 
 /* ==========================================================================
 Benefits List
@@ -704,11 +711,11 @@ Benefits List
   background:#fff;
 }
 
-.benefits-list h1 {
+.benefits-list h5 {
     margin: 0 0 10px 0;
     padding: 0;
     color: #171738;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .benefits-list .section-title {
@@ -741,7 +748,7 @@ Benefits List
     text-align: center;
     font-size: 25px;
     line-height: 90px;
-    // background: #12355B;
+    background: #12355B;
 }
 .feature-icon i {
     color: #23CE6B;
@@ -876,10 +883,10 @@ Climbcard Intro
 .parallax {
     position: relative;
     background: no-repeat center center fixed;
-    background-image: image-url('rockwall.jpg');
+    background-image: image-url('chalk-hands.jpg');
     background-size: cover;
     margin-top:0;
-    min-height: 500px;
+    min-height: 400px;
 
 
 }
@@ -889,14 +896,14 @@ Climbcard Intro
 FAQ
 ========================================================================== */
 .faq {
-    padding: 40px 0 20px 0;
+    padding: 40px 0;
     background-color: #fff;
 
-  h1 {
+  h5 {
     margin: 0 0 15px 0;
     color:#171738;
     font-weight: 400;
-    font-size: 22px;
+    font-size: 18px;
   }
 
   .section-title {
@@ -908,10 +915,22 @@ FAQ
 
   p {
    color:#778899;
-   margin-bottom: 40px; 
+   
   }
 
+  .faq-block {
+    border: solid 2px #e9f0f3;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    padding: 30px;
+    background: #e9f0f3;
+    min-height: 215px;
+  }
+
+
 }
+
+
 
 
 /* ==========================================================================
@@ -919,7 +938,8 @@ Footer
 ========================================================================== */
 footer {
     padding: 25px 0;
-    background: #171738;;
+    // background: #171738;
+    background: #1a1a1a;
 }
 
 footer ul {
