--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,7 +41,7 @@
 				<h1 class="section-title">Member Benefits</h1>
 				<div class="row">
 						
-						<div class="col-md-3 feature-1 wp2">
+						<div class="col-md-3 col-sm-6 feature-1 wp2">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-heart-o"></i>
@@ -53,7 +53,7 @@
 							</div>
 						</div>
 
-						<div class="col-md-3 feature-2 wp2 delay-05s">
+						<div class="col-md-3 col-sm-6 feature-2 wp2 delay-05s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-star-o"></i>
@@ -65,7 +65,7 @@
 							</div>
 						</div>
 
-						<div class="col-md-3 feature-3 wp2 delay-1s">
+						<div class="col-md-3 col-sm-6 feature-3 wp2 delay-1s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-credit-card"></i>
@@ -76,7 +76,7 @@
 								<p>Our membership is both flexible and affordable. Pay month-to-month and cancel anytime.</p>
 							</div>
 						</div>
-						<div class="col-md-3 feature-4 wp2 delay-15s">
+						<div class="col-md-3 col-sm-6 feature-4 wp2 delay-15s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-medkit"></i>
@@ -96,10 +96,7 @@
 			<div class="iphone-wallet">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-6">
-								<%= image_tag "white_iphone_girl.png", class: "wp3", alt: "Climbcard Wallet iOS" %>
-						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 col-md-push-6">
 							<h1>ClimbCard is Fast, Easy, &amp; Convenient!</h1>
 							<p>Once enrolled as a ClimbCard member, you will recieve a digital membership card. Simply visit any of our partner gyms, present your ClimbCard and start climbing.</p>
 							<div class="os-btn">
@@ -107,6 +104,12 @@
 							<div class="os-btn">
 								<i class="fa fa-google-wallet"></i>Google Wallet</div>
 						</div>
+						<div class="col-md-6 col-md-pull-6">
+							<div class="iphone-wrapper text-center">
+								<%= image_tag "white_iphone_girl.png", class: "wp3", alt: "Climbcard Wallet iOS" %>
+								</div>
+						</div>
+						
 					</div>
 				</div>
 			</div>
@@ -126,7 +129,7 @@
 								<ul class="slides" id="featuresSlider">
 									<li>
 										<h1>Is Rock Climbing a Good Cardio Workout?</h1>
-										<p>If you find yourself bored by the typical gym workouts or jogging around the block, you may want to try a different approach to physical fitness. Rock climbing is an increasingly popular sport that provides a total-body workout without the monotony of pacing on a treadmill.</p>
+										<p>"If you find yourself bored by the typical gym workouts or jogging around the block, you may want to try a different approach to physical fitness. Rock climbing is an increasingly popular sport that provides a total-body workout without the monotony of pacing on a treadmill."</p>
 										<cite class="author">Jill Lee, Livestrong</cite>
 											<div class="content-logo">
 												<%= image_tag "live_strong.png", class: "custom-responsive", alt: "Livestrong" %>
@@ -134,7 +137,7 @@
 									</li>
 									<li>
 										<h1>How Rock Climbing Does Your Mind And Body Good</h1>
-										<p>Although not often thought of as a common form of cardio, ascending walls is a sure way to get your heart pumping, similar to the way climbing stairs or jogging does. A one-hour climb session can burn well over 700 calories. Plus, tricky maneuvers and lengthy reaches often require developing flexibility that wasn't there before.</p>
+										<p>"Although not often thought of as a common form of cardio, ascending walls is a sure way to get your heart pumping, similar to the way climbing stairs or jogging does. A one-hour climb session can burn well over 700 calories. Plus, tricky maneuvers and lengthy reaches often require developing flexibility that wasn't there before."</p>
 										<cite class="author">Abigail Wise, The Huffington Post</cite>
 										<div class="content-logo">
 												<%= image_tag "huff_po.png", class: "custom-responsive", alt: "Huffington Post" %>
@@ -143,7 +146,7 @@
 									</li>
 									<li>
 										<h1>Is Indoor Rock Climbing A Good Workout?</h1>
-										<p>Hauling yourself up a wall will challenge your whole body—and what guy couldn't use a few Spider-Man moves in his repertoire? Indoor climbing is a great full-body workout for both strength and cardio, says 5.14 (extreme-grade) climber Seth Lytton of trainingbeta.com.</p>
+										<p>"Hauling yourself up a wall will challenge your whole body—and what guy couldn't use a few Spider-Man moves in his repertoire? Indoor climbing is a great full-body workout for both strength and cardio."</p>
 										<cite class="author">Men's Fitness Editors, Men's Fitness</cite>
 										<div class="content-logo">
 												<%= image_tag "mens_fitness_logo.png", class: "custom-responsive", alt: "Men's Fitness" %>
@@ -151,7 +154,7 @@
 									</li>
 									<li>
 										<h1>The Next Urban Sports Craze</h1>
-										<p>Indoor climbing could soon replace spin class as the urban professional’s sport of choice</p>
+										<p>"Indoor climbing could soon replace spin class as the urban professional’s sport of choice"</p>
 										<cite class="author">Abe Streep, Outside</cite>
 										<div class="content-logo">
 												<%= image_tag "outside_logo.jpg", class: "custom-responsive", alt: "Outside" %>
@@ -217,7 +220,8 @@
 			</div>
 		</section>
 
-		<section class="callToAction">
+		<section class="callToAction group">
+			<div class="col-md-12">
 			<h1 class="section-title text-center">Want early access? Sign up for the latest news!</h1>
 			<section class="user-subscribe">
 				<div id="mc_embed_signup">
@@ -241,7 +245,9 @@
 				</form>
 				</div>
 			</section>
+			</div>
 		</section> <!--callToAction-->
+		
 
 		
 		<!-- Footer -->
@@ -250,18 +256,6 @@
 		
 		<!-- / Footer -->
 
-		<!-- <div class="overlay overlay-boxify">
-			<nav>
-				<ul>
-					<li><a href="#about"><i class="fa fa-heart"></i>About</a></li>
-					<li><a href="#features"><i class="fa fa-flash"></i>Features</a></li>
-				</ul>
-				<ul>
-					<li><a href="#screenshots"><i class="fa fa-desktop"></i>Screenshots</a></li>
-					<li><a href="#download"><i class="fa fa-download"></i>Download</a></li>
-				</ul>
-			</nav>
-		</div> -->
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
