added more media queries and copy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -84,7 +84,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h5>Health &amp; Wellness</h5>
-								<p>Climbing is a full body workout that builds functional strength and endurance. Have what it takes to make it to the top?</p>
+								<p>Climbing is a full body workout that builds functional strength and endurance. Do you have what it takes to make it to the top?</p>
 							</div>
 						</div>
 				</div> <!--/row-->
@@ -99,10 +99,12 @@
 						<div class="col-md-6 col-md-push-6">
 							<h1>ClimbCard is Fast, Easy, &amp; Convenient!</h1>
 							<p>Once enrolled as a ClimbCard member, you will recieve a digital membership card. Simply visit any of our partner gyms, present your ClimbCard and start climbing.</p>
-							<div class="os-btn">
-								<i class="fa fa-apple"></i>Apple Wallet</div>
-							<div class="os-btn">
-								<i class="fa fa-google-wallet"></i>Google Wallet</div>
+							<div class="os-btn-group">
+								<div class="os-btn">
+									<i class="fa fa-apple"></i>Apple Wallet</div>
+								<div class="os-btn">
+									<i class="fa fa-google-wallet"></i>Google Wallet</div>
+							</div>
 						</div>
 						<div class="col-md-6 col-md-pull-6">
 							<div class="iphone-wrapper text-center">
@@ -137,12 +139,11 @@
 									</li>
 									<li>
 										<h1>How Rock Climbing Does Your Mind And Body Good</h1>
-										<p>"Although not often thought of as a common form of cardio, ascending walls is a sure way to get your heart pumping, similar to the way climbing stairs or jogging does. A one-hour climb session can burn well over 700 calories. Plus, tricky maneuvers and lengthy reaches often require developing flexibility that wasn't there before."</p>
+										<p>"Although not often thought of as a common form of cardio, ascending walls is a sure way to get your heart pumping, similar to the way climbing stairs or jogging does. A one-hour climb session can burn well over 700 calories."</p>
 										<cite class="author">Abigail Wise, The Huffington Post</cite>
 										<div class="content-logo">
 												<%= image_tag "huff_po.png", class: "custom-responsive", alt: "Huffington Post" %>
 											</div>
-										
 									</li>
 									<li>
 										<h1>Is Indoor Rock Climbing A Good Workout?</h1>
@@ -154,7 +155,7 @@
 									</li>
 									<li>
 										<h1>The Next Urban Sports Craze</h1>
-										<p>"Indoor climbing could soon replace spin class as the urban professional’s sport of choice"</p>
+										<p>"Indoor climbing could soon replace spin class as the urban professional’s sport of choice."</p>
 										<cite class="author">Abe Streep, Outside</cite>
 										<div class="content-logo">
 												<%= image_tag "outside_logo.jpg", class: "custom-responsive", alt: "Outside" %>
