--- a/app/views/pages/partner.html.erb
+++ b/app/views/pages/partner.html.erb
@@ -32,30 +32,30 @@
 			<div class="container">
 				<h1 class="section-title">What's In It For You?</h1>
 					<div class="row">
-						<div class="col-md-3 feature-1 wp2">
+						<div class="col-md-3 col-sm-6 feature-1 wp2">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-male"></i>
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h5>High Quality New Clients</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+								<h5>Reach New Climbers</h5>
+								<p>Build your business by tapping into our network of passionate indoor climbers.</p>
 							</div>
 						</div>
-						<div class="col-md-3 feature-2 wp2 delay-05s">
+						<div class="col-md-3 col-sm-6 feature-2 wp2 delay-05s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-line-chart"></i>
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h5>Incremental Revenue</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+								<h5>Drive Revenue</h5>
+								<p>Uncover new revenue opportunities by building a more inclusive climbing community.</p>
 							</div>
 						</div>
 
-						<div class="col-md-3 feature-3 wp2 delay-1s">
+						<div class="col-md-3 col-sm-6 feature-3 wp2 delay-1s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-bullhorn"></i>
@@ -66,7 +66,7 @@
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 							</div>
 						</div>
-						<div class="col-md-3 feature-3 wp2 delay-1s">
+						<div class="col-md-3 col-sm-6 feature-3 wp2 delay-1s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-desktop"></i>
@@ -74,7 +74,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h5>Seamless Technology</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+								<p>Our digital membership card integrates with your existing workflow and provides key metrics and tools to help grow your business.</p>
 							</div>
 						</div>
 					</div>  <!-- /row -->
