--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -593,6 +593,7 @@ Hero
     background: rgb(40, 70, 102) no-repeat center center;
     background-image:image-url('hero-main.jpg'); 
     background-size: cover;
+    background-position: 69% 20%;
     color: #fff;
 }
 
@@ -687,7 +688,7 @@ Features Slider
 }
 .features-slider .flickity-page-dots {
     text-align: center;
-    // margin-top: 10%;
+    margin-top: 6%;
     position: static;
 }
 .features-slider .flickity-page-dots .dot {
@@ -909,7 +910,7 @@ FAQ
     margin-bottom: 30px;
     padding: 30px;
     background: #e9f0f3;
-    min-height: 215px;
+    height: 215px;
   }
 
 
@@ -1091,6 +1092,7 @@ Waypoints
 .form-control:focus {
   box-shadow:none;
   -webkit-box-shadow: none;
+  border-color:#23CE6B;
 }
 
 
@@ -1236,7 +1238,7 @@ a:hover, a:active {
 }
 
 .email:focus {
-  border-color: #23CE6B;;
+  border-color: #23CE6B;
 }
 
 .postalCode:focus {
@@ -1250,6 +1252,10 @@ div.mce_inline_error {
 
 div#mce-responses {
   margin-top:40px;
+}
+
+.user-subscribe #mc_embed_signup input.mce_inline_error {
+  border-color:#fff !important;
 }
 
 
@@ -1425,8 +1431,15 @@ header i {
       margin-top: 40px;
     }
 
+    .showcase {
 
-    .features-slider{
+      h1, p, .os-btn-group {
+        text-align: center;
+      }
+    }
+
+
+    .features-slider {
         height:100%;
         padding: 5% 80px 5% 80px;
 
@@ -1434,6 +1447,12 @@ header i {
           padding: 5% 80px 0% 80px;
         }
         
+    }
+
+    .features-intro {
+      .texture-overlay {
+        background:none;
+      }
     }
 
 
@@ -1493,6 +1512,7 @@ header i {
       width: 100%;
       margin-top:8px;
     }
+
 }
 
 
