fixed faq boxes

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -910,7 +910,7 @@ FAQ
     margin-bottom: 30px;
     padding: 30px;
     background: #e9f0f3;
-    height: 215px;
+    height: 240px;
   }
 
 
@@ -1455,6 +1455,9 @@ header i {
       }
     }
 
+    .faq .faq-block {
+      height:auto;
+    }
 
 }
 
