updated the gem and scripts

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
 								<%= link_to root_path do %>
-									<%= image_tag "new_white_logo.png", class: "img-box", alt: "Boxify Logo" %>
+									<%= image_tag "new_white_logo.png", class: "img-box", alt: "ClimbCard Logo" %>
 								<% end %>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon social-icons clearfix">
