--- a/app/views/pages/partner.html.erb
+++ b/app/views/pages/partner.html.erb
@@ -5,7 +5,7 @@
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
 								<%= link_to root_path do %>
-									<%= image_tag "new_white_logo.png", class: "img-box", alt: "Boxify Logo" %>
+									<%= image_tag "new_white_logo.png", class: "img-box", alt: "ClimbCard Logo" %>
 								<% end %>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon social-icons clearfix">
@@ -32,7 +32,33 @@
 			<div class="container">
 				<h1 class="section-title">What's In It For You?</h1>
 					<div class="row">
+
+
 						<div class="col-md-3 col-sm-6 feature-1 wp2">
+							<div class="text-center">
+								<div class="feature-icon">
+									<i class="fa fa-bullhorn"></i>
+								</div>
+							</div>
+							<div class="feature-content text-center">
+								<h5>Increased Brand Exposure</h5>
+								<p>Leverage our strategic marketing initiatives to showcase your amazing climbing facilities.</p>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 feature-2 wp2 delay-05s">
+							<div class="text-center">
+								<div class="feature-icon">
+									<i class="fa fa-desktop"></i>
+								</div>
+							</div>
+							<div class="feature-content text-center">
+								<h5>Intuitive Technology</h5>
+								<p>Our digital membership card seamlessly integrates with an intuitive cloud based platform designed to improve customer interactions and business insights.</p>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 feature-3 wp2 delay-1s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-male"></i>
@@ -43,7 +69,8 @@
 								<p>Build your business by tapping into our network of passionate indoor climbers.</p>
 							</div>
 						</div>
-						<div class="col-md-3 col-sm-6 feature-2 wp2 delay-05s">
+						
+						<div class="col-md-3 col-sm-6 feature-4 wp2 delay-15s">
 							<div class="text-center">
 								<div class="feature-icon">
 									<i class="fa fa-line-chart"></i>
@@ -55,28 +82,6 @@
 							</div>
 						</div>
 
-						<div class="col-md-3 col-sm-6 feature-3 wp2 delay-1s">
-							<div class="text-center">
-								<div class="feature-icon">
-									<i class="fa fa-bullhorn"></i>
-								</div>
-							</div>
-							<div class="feature-content text-center">
-								<h5>Marketing &amp; Brand Exposure</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 feature-3 wp2 delay-1s">
-							<div class="text-center">
-								<div class="feature-icon">
-									<i class="fa fa-desktop"></i>
-								</div>
-							</div>
-							<div class="feature-content text-center">
-								<h5>Seamless Technology</h5>
-								<p>Our digital membership card integrates with your existing workflow and provides key metrics and tools to help grow your business.</p>
-							</div>
-						</div>
 					</div>  <!-- /row -->
 			</div> <!-- /container -->
 		</section>
