--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,8 @@
 <html lang="en" class="no-js">
 <head>
   <title>ClimbCard</title>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Nunito:400,300,700'%>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= favicon_link_tag 'favicon.ico' %>
   <%= csrf_meta_tags %>
 		
@@ -37,6 +36,7 @@
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
 </head>
+	<%= javascript_include_tag 'application' %>
 <body>
 
 <%= yield %>
