added link for footer logo

--- a/app/views/layouts/partials/_external_footer.html.erb
+++ b/app/views/layouts/partials/_external_footer.html.erb
@@ -3,7 +3,9 @@
 				<div class="row">
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<div class="logo-wrap">
+							<%= link_to root_path do %>
 							<%= image_tag "new_white_logo.png", class: "img-responsive footer-logo", alt: "Start your climb" %>
+							<% end %>
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-6 col-xs-12">
